--- a/style/profile.css
+++ b/style/profile.css
@@ -1,7 +1,16 @@
+.msg_shop {
+  border: 2px solid #ffa908;
+  border-radius: 3px;
+  padding: 5px;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 0px;
+}
 .msg {
   border: 2px solid #ffa908;
   border-radius: 3px;
-  padding: 10px;
+  padding: 5px;
   text-align: center;
   font-weight: bold;
+  /* margin-top: 0px; */
 }
