--- a/style/profile.css
+++ b/style/profile.css
@@ -34,25 +34,18 @@ p {
 
 .table_shop td,
 .table_shop th {
-  padding: 5px;
+  padding: 3px;
   /* Поля в ячейках */
   border: 1px solid #333;
   /* Параметры рамки */
 }
 
+/* Зебра */
 .table_shop tbody tr:nth-child(even) {
   background: #f0f0f0;
-  /* Зебра */
-}
-
-.table_shop input {
-  width: 100%;
-  height: 100%;
 }
 
 .poz_center {
-  /* display: flex;
-  justify-content: center; */
   text-align: center;
 }
 
@@ -63,3 +56,30 @@ p {
 label {
   cursor: pointer;
 }
+
+/* оформление input type="radio"
+.redio_shop {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+
+  border: 2px solid #999;
+  transition: 0.2s all linear;
+  outline: none; */
+/* margin-right: 5px; */
+
+/* position: relative;
+  top: 4px; */
+/* width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.redio_shop:checked {
+  border: 3px solid black;
+} */
