--- a/style/profile.css
+++ b/style/profile.css
@@ -1,3 +1,12 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  /* font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif; */
+}
+body {
+  padding: 0px 5px;
+}
 .msg_shop {
   border: 2px solid #ffa908;
   border-radius: 3px;
