--- a/style/userpanel.css
+++ b/style/userpanel.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: space-around;
 }
-/* .userpanel_logout {
-  margin-right: 5px;
-} */
+.userpanel_logout,
+.userpanel_user-admin {
+  width: 100px;
+}
