--- a/style/profile.css
+++ b/style/profile.css
@@ -21,7 +21,11 @@ body {
   padding: 5px;
   text-align: center;
   font-weight: bold;
-  /* margin-top: 0px; */
+  margin: 0px;
+  /* height: 30px; */
+}
+.msg_cash {
+  height: 40px;
 }
 p {
   margin-top: 10px;
@@ -73,7 +77,7 @@ label {
 .cash {
   display: flex;
   justify-content: space-around;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   flex-wrap: wrap;
 }
 .cash label {
