--- a/style/adminlk.css
+++ b/style/adminlk.css
@@ -42,11 +42,32 @@
 }
 
 /* редактирование записей */
-.setting {
+/* .setting {
   margin: 2px;
   cursor: pointer;
 }
 .setting:hover {
   box-shadow: inset 0px 0px 5px rgba(122,122,122,0.9);
+
+} */
+.setting_td {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  box-sizing: border-box;
+  outline: none;
+  text-align: center;
+}
+.setting_img {
+  width: 20px;
+}
+.setting_but {
+  cursor: pointer;
+  /* background-color: rgba(190, 184, 184, 0.678); */
+  height: 26px;
+  width: 100%;
+}
+.setting_but:hover {
+  box-shadow:  0px 0px 5px rgba(122,122,122,0.9);
 
 }
