--- a/style/adminlk.css
+++ b/style/adminlk.css
@@ -26,6 +26,7 @@
 .table_shop input {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 .poz_center {
@@ -71,3 +72,7 @@
   box-shadow:  0px 0px 5px rgba(122,122,122,0.9);
 
 }
+/* редактирование строк в таблице */
+/* .edit_line {
+  margin: 2px;
+} */
