--- a/style/adminlk.css
+++ b/style/adminlk.css
@@ -1,40 +1,27 @@
 .table_shop table {
-  width: 100%;
-  /* Ширина таблицы */
-  border-collapse: collapse;
-  /* Убираем двойные линии */
+  width: 100%; /* Ширина таблицы */
+  border-collapse: collapse; /* Убираем двойные линии */
 }
-
 .table_shop thead {
-  background: #f5e8d0;
-  /* Цвет фона заголовка */
+  background: #f5e8d0; /* Цвет фона заголовка */
 }
-
 .table_shop td,
 .table_shop th {
-  padding: 5px;
-  /* Поля в ячейках */
-  border: 1px solid #333;
-  /* Параметры рамки */
+  padding: 3px; /* Поля в ячейках */
+  border: 1px solid #333; /* Параметры рамки */
 }
-
 .table_shop tbody tr:nth-child(even) {
-  background: #f0f0f0;
-  /* Зебра */
+  background: #f0f0f0;  /* Зебра */
 }
-
 .table_shop input {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
 }
 
-.poz_center {
-  /* display: flex;
-  justify-content: center; */
+.poz_center {   /* поле "доступ" по центру */
   text-align: center;
 }
-
 .poz_r {
   text-align: right;
 }
@@ -54,27 +41,36 @@
 
 } */
 .setting_td {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-  box-sizing: border-box;
-  outline: none;
-  text-align: center;
+  width: 100px;
+  padding: 0;
+  height: 22px;
 }
 .setting_img {
-  width: 20px;
+  width: 14px;
+  vertical-align: middle;
 }
-.setting_but {
+.edit_but {
+  box-sizing: border-box;
   cursor: pointer;
-  /* background-color: rgba(190, 184, 184, 0.678); */
-  height: 26px;
+  height: 18px;
+  width: 80px;
+}
+.edit_but_active:hover,
+.edit_but_save:hover {
+  box-shadow: 0px 0px 5px rgba(122, 122, 122, 0.9);
+}
+.edit_group {
   width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.setting_but:hover {
-  box-shadow:  0px 0px 5px rgba(122,122,122,0.9);
-
+.el_hide {
+  display: block;
+  display: none;
 }
-/* редактирование строк в таблице */
-/* .edit_line {
-  margin: 2px;
-} */
+select {
+  width: 100%;
+  text-align: center;
+}
