--- a/style/adminlk.css
+++ b/style/adminlk.css
@@ -46,13 +46,13 @@
   height: 22px;
 }
 .setting_img {
-  width: 14px;
-  vertical-align: middle;
+  width: 16px;
+  /* vertical-align: middle; */
 }
 .edit_but {
   box-sizing: border-box;
   cursor: pointer;
-  height: 18px;
+  height: 22px;
   width: 80px;
 }
 .edit_but_active:hover,
